fix(ffe-buttons): replace hardcoded spacing with variables
BREAKING CHANGE: This commit is likely to cause small visual regressions caused by slightly altered margin and padding values.

--- a/packages/ffe-buttons/less/base-button.less
+++ b/packages/ffe-buttons/less/base-button.less
@@ -63,7 +63,7 @@
     justify-content: center;
     line-height: 24px;
     overflow: hidden;
-    padding: 8px 30px;
+    padding: @ffe-spacing-xs @ffe-spacing-lg;
     position: relative;
     text-align: center;
     text-decoration: none;
@@ -339,7 +339,7 @@
 }
 
 .ffe-button--expanded  {
-    padding: 8px;
+    padding: @ffe-spacing-xs;
     width: 45px;
 }
 
@@ -349,7 +349,7 @@
     box-shadow: none;
     color: @ffe-blue-azure;
     display: inline-block;
-    padding: 4px;
+    padding: @ffe-spacing-2xs;
     text-align: left;
     transition: all @ffe-transition-duration @ffe-ease;
     width: auto;
@@ -374,7 +374,7 @@
 }
 
 .ffe-button--condensed {
-    padding: 5px 20px;
+    padding: @ffe-spacing-2xs @ffe-spacing-sm;
     .ffe-fontsize-button-condensed;
 }
 
@@ -395,7 +395,7 @@
     display: inline-block;
     fill: currentColor;
     height: 16px;
-    margin: 0 5px;
+    margin: 0 @ffe-spacing-2xs;
     width: 16px;
 
     .ffe-button--condensed & {
